--- a/.env_sample
+++ b/.env_sample
@@ -1,10 +1,9 @@
-MYSQL_HOST=localhost
-MYSQL_USER=root
-MYSQL_PASSWORD=password
-MYSQL_DB=ssis_db
-SECRET_KEY=secret_key
+MYSQL_HOST=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_DB=
+SECRET_KEY=
 
-# Cloudinary settings - Replace with your actual credentials
-CLOUDINARY_CLOUD_NAME=dc1w6cmgw
-CLOUDINARY_API_KEY=627484895122654
-CLOUDINARY_API_SECRET=r5zvNjXufD7LJQW9XHntFKmRPbE
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
